fixed broken jump links size

--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,10 @@
 }
 
 
-main {
+ main {
     margin-top: 20px;
     padding: 1em;
 }
-
 .main-section {
     margin-bottom: 2.5em;
 }
@@ -82,6 +81,7 @@ main {
     border-bottom: 2px solid black;
 } */
 
-section > p,ul,ol{
+
+section > p, section>ul, section>ol{
     margin-left: 2em;
 }
